Fix: submenuWraper top

--- a/styles/scss/vtex.menu.scss
+++ b/styles/scss/vtex.menu.scss
@@ -126,7 +126,7 @@
 
     .submenuWrapper {
       right: 0;
-      top: 15px;
+      top: 10px;
 
       .menuContainerNav {
         align-items: flex-start !important;
